<resources>
    <string name="app_name">Mental arithmetic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="str_cancel">Cancel</string>
    <string name="str_notify">Lorem Ipsum используют потому, что тот обеспечивает более или менее.</string>
    <string name="str_classic_mode">Классический режим</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_switch_add">Сложение и вычитание</string>
    <string name="text_switch_mult">Умножение и деление</string>
    <string name="text_switch_pow">Возведение в степень</string>
    <string name="select_num_oper">Выберите количество операций</string>
    <string name="begin">START</string>
    <string name="go">GO</string>
</resources>
