<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.constantine.silver.mentalarithmetic.ModeClassic">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_switch_add"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_classic_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.suke.widget.SwitchButton
                android:id="@+id/switch_addition"
                android:layout_width="73dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sb_checked_color="@android:color/holo_blue_dark"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_switch_mult"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_classic_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.suke.widget.SwitchButton
                android:id="@+id/switch_mult"
                android:layout_width="73dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sb_checked_color="@android:color/holo_blue_dark"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_switch_pow"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_classic_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.suke.widget.SwitchButton
                android:id="@+id/switch_pow"
                android:layout_width="73dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sb_checked_color="@android:color/holo_blue_dark"/>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/select_num_oper"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_classic_mode" />

            <co.ceryle.segmentedbutton.SegmentedButtonGroup
                android:id="@+id/segmentedButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:sbg_animateSelector="fastOutSlowIn"
                app:sbg_animateSelectorDuration="1000"
                app:sbg_backgroundColor="@android:color/white"
                app:sbg_dividerColor="@android:color/darker_gray"
                app:sbg_dividerPadding="10dp"
                app:sbg_dividerRadius="10dp"
                app:sbg_dividerSize="1dp"
                app:sbg_position="1"
                app:sbg_radius="2dp"
                app:sbg_ripple="true"
                app:sbg_rippleColor="@android:color/darker_gray"
                app:sbg_selectorColor="@android:color/holo_blue_dark"
                app:sbg_selectorTextColor="@android:color/white"
                app:sbg_shadow="false"
                app:sbg_shadowElevation="3dp"
                app:sbg_shadowMargin="4dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:text="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:text="2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:text="3" />


            </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        </LinearLayout>

    </LinearLayout>

    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:sbg_animateSelector="fastOutSlowIn"
        app:sbg_animateSelectorDuration="1000"
        app:sbg_backgroundColor="@android:color/white"
        app:sbg_dividerColor="@android:color/darker_gray"
        app:sbg_dividerPadding="0dp"
        app:sbg_dividerRadius="0dp"
        app:sbg_dividerSize="1dp"
        app:sbg_position="0"
        app:sbg_radius="0dp"
        app:sbg_ripple="true"
        app:sbg_rippleColor="@android:color/darker_gray"
        app:sbg_selectorColor="@android:color/holo_blue_light"
        app:sbg_selectorTextColor="@android:color/white"
        app:sbg_shadow="false"
        app:sbg_shadowElevation="3dp"
        app:sbg_shadowMargin="4dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/begin" />
    </co.ceryle.segmentedbutton.SegmentedButtonGroup>


</android.support.constraint.ConstraintLayout>
